Add image gallery to products

--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -94,7 +94,7 @@ const links = [
           {link.menu && (
             <div
               class:list={[
-                "absolute w-fit max-h-96 overflow-y-auto p-2 translate-y-4 opacity-0 transition-all duration-150 pointer-events-none group-hover:translate-y-0 group-hover:opacity-100 group-hover:pointer-events-auto",
+                "absolute w-fit max-h-96 overflow-y-auto p-2 translate-y-4 opacity-0 transition-all duration-150 pointer-events-none group-hover:translate-y-0 group-hover:opacity-100 group-hover:pointer-events-auto shadow-lg",
                 colored ? "bg-primary text-white" : "bg-white text-black",
               ]}
             >
