Add requested changes

--- a/src/components/gallery-modal.astro
+++ b/src/components/gallery-modal.astro
@@ -118,7 +118,7 @@ const { color = "primary", class: _class } = Astro.props as Props;
         div.classList.add(
           "swiper-slide",
           "!h-[80vh]",
-          "flex",
+          "!flex",
           "items-center",
           "justify-center",
         );
