change z of floating wa button

--- a/src/components/float-wa-button.astro
+++ b/src/components/float-wa-button.astro
@@ -13,7 +13,7 @@ const href = `https://wa.me/${number}?text=${encodeURIComponent(
 )}`;
 ---
 
-<div class="fixed bottom-4 right-4">
+<div class="fixed bottom-4 right-4 z-40">
   <a
     href={href}
     target="_blank"
