add action form

--- a/src/pages/[locale]/[budget].astro
+++ b/src/pages/[locale]/[budget].astro
@@ -79,7 +79,7 @@ const form = [
 
     <form
       class="flex flex-col relative text-xs md:text-base mt-12 md:mt-20"
-      name="Orçamento"
+      name="orcamento"
       action={resolveLocaleURL("routes.success.page", locale)}
       method="POST"
       netlify-honeypot="bot-field"
