Set form-name correctly

--- a/src/pages/[locale]/[budget].astro
+++ b/src/pages/[locale]/[budget].astro
@@ -119,7 +119,7 @@ const form = [
       data-netlify="true"
       data-action={resolveLocaleURL("routes.success.page", locale)}
     >
-      <input type="hidden" name="form-name" value="budget-form" />
+      <input type="hidden" name="form-name" value="orcamento" />
       <input
         type="hidden"
         name="subject"
