--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -16,6 +16,21 @@ const resolvedTitle = `DUSPOR${title ? " | " + title : ""}`;
 <!doctype html>
 <html lang="pt-br">
 	<head>
+		<!-- Google Tag Manager -->
+		<script is:inline>
+			(function (w, d, s, l, i) {
+				w[l] = w[l] || [];
+				w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
+				var f = d.getElementsByTagName(s)[0],
+					j = d.createElement(s),
+					dl = l != "dataLayer" ? "&l=" + l : "";
+				j.async = true;
+				j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
+				f.parentNode.insertBefore(j, f);
+			})(window, document, "script", "dataLayer", "GTM-WNCKW96C");
+		</script>
+		<!-- End Google Tag Manager -->
+
 		<meta charset="UTF-8" />
 		<meta name="description" content={description ?? ""} />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -43,6 +58,16 @@ const resolvedTitle = `DUSPOR${title ? " | " + title : ""}`;
 			colored ? "bg-primary" : "bg-white",
 		]}
 	>
+		<!-- Google Tag Manager (noscript) -->
+		<noscript
+			><iframe
+				src="https://www.googletagmanager.com/ns.html?id=GTM-WNCKW96C"
+				height="0"
+				width="0"
+				style="display:none;visibility:hidden"></iframe></noscript
+		>
+		<!-- End Google Tag Manager (noscript) -->
+
 		<script
 			is:inline
 			src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"
