--- a/src/pages/[locale]/index.astro
+++ b/src/pages/[locale]/index.astro
@@ -149,6 +149,36 @@ const resolveMobileStyle = (index: number) =>
         ))
       }
     </GalleryFade>
+
+    <div
+      class="uppercase text-center text-2xl sm:text-4xl md:text-5xl lg:text-7xl [&_strong]:text-primary [&_strong]:font-extrabold tracking-wide pt-16"
+      set:html={marked(
+        resolvePropByLocale(home.data, "testimonialsTitle", locale),
+      )}
+    />
+
+    <GalleryFade class="my-4 md:my-12" slidesPerView={1}>
+      {
+        home.data.testimonials.map((testimonial) => (
+          <div class="flex items-center justify-center py-16 md:py-6">
+            <div class="text-center pb-4">
+              <div
+                class="text-xl sm:text-2xl md:text-3xl lg:text-4xl italic max-w-[60vw]"
+                set:html={marked(
+                  `"${resolvePropByLocale(testimonial, "testimonial", locale)}"`,
+                )}
+              />
+              {testimonial.name && (
+                <div
+                  class="text-base sm:text-lg md:text-xl lg:text-2xl italic mt-4"
+                  set:html={marked(testimonial.name)}
+                />
+              )}
+            </div>
+          </div>
+        ))
+      }
+    </GalleryFade>
   </Container>
 
   <Footer />
