--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -56,6 +56,11 @@ const links = [
     name: "routes.contact.page",
     label: "routes.contact.title",
   },
+  {
+    href: "routes.blog.path",
+    name: "routes.blog.page",
+    label: "routes.blog.title",
+  },
 ] satisfies Link[];
 ---
 
