--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -38,13 +38,10 @@ const config = await getEntry("config", "index");
 		<meta name="description" content={description ?? ""} />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="generator" content={Astro.generator} />
-		<meta property="og:url" content="https://duspor.caiquedecamargo.com.br" />
+		<meta property="og:url" content="https://duspor.com.br" />
 		<meta property="og:description" content={config.data.siteDescription} />
 		<meta property="og:title" content="Duspor" />
-		<meta
-			property="og:image"
-			content="https://duspor.caiquedecamargo.com.br/logo-min.svg"
-		/>
+		<meta property="og:image" content="https://duspor.com.br/logo-min.svg" />
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 
 		<script
