--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -41,15 +41,15 @@ const config = await getEntry("config", "index");
 		<meta property="og:url" content="https://duspor.com.br" />
 		<meta property="og:description" content={config.data.siteDescription} />
 		<meta property="og:title" content="Duspor" />
-		<meta property="og:image" content="https://duspor.com.br/logo-min.svg" />
+		<meta property="og:image" content="https://duspor.com.br/logo-min.png" />
 		<meta
 			property="og:image:secure_url"
-			content="https://duspor.com.br/logo-min.svg"
+			content="https://duspor.com.br/logo-min.png"
 		/>
-		<meta property="og:image:width" content="687" />
-		<meta property="og:image:height" content="639" />
+		<meta property="og:image:width" content="688" />
+		<meta property="og:image:height" content="640" />
 		<meta property="og:image:alt" content="Duspor logo" />
-		<meta property="og:image:type" content="image/svg+xml" />
+		<meta property="og:image:type" content="image/png" />
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 
 		<script
