fix: error on build

--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -130,7 +130,7 @@ const links = [
   </nav>
 
   <div class="block md:hidden" slot="end">
-    <MobileMenu client:only>
+    <MobileMenu client:load>
       <div
         class:list={[
           "h-[100dvh] p-4 pr-1 w-[80vw] flex flex-col justify-between font-bold",
