--- a/src/components/hexagon.astro
+++ b/src/components/hexagon.astro
@@ -3,14 +3,20 @@ type Props = {
   class?: string;
   style?: Record<string, string>;
   size?: "xxs" | "xs" | "sm" | "md" | "lg" | "xl" | "2xl" | "3xl";
+  noShadow?: boolean;
 };
 
-const { class: _class, style, size = "md" } = Astro.props as Props;
+const {
+  class: _class,
+  style,
+  size = "md",
+  noShadow = false,
+} = Astro.props as Props;
 ---
 
 <div
   class:list={[
-    `hexagon hexagon-${size} flex items-center justify-center`,
+    `flex items-center justify-center rounded-xl border-2 border-white ${noShadow ? "" : "shadow-[-4px_4px_12px_rgba(0,0,0,0.40)]"} overflow-hidden`,
     _class,
   ]}
   style={style}
