--- a/src/pages/[locale]/[products]/[slug].astro
+++ b/src/pages/[locale]/[products]/[slug].astro
@@ -79,94 +79,61 @@ const resolvePublicPath = (path: string) => {
   <Header colored locale={locale} page={page} />
 
   <Container class="my-16 md:my-28 p-1">
-    <section class="flex items-center">
-      <div class="lg:-ml-2">
+    <section
+      class="grid md:grid-cols-[40%_1fr] grid-flow-row gap-8 items-center"
+    >
+      <div class="py-12">
         <h1
           class="uppercase font-bold text-lg md:text-4xl lg:text-6xl text-white"
         >
           {resolvePropByLocale(product.data, "title", locale)}
         </h1>
-        <Logo class="w-[100px] md:w-[200px] h-10 md:h-20 text-white md:mt-4" />
+
+        {
+          !!applications.length && (
+            <section>
+              <h2 class="mt-12 text-xl md:text-4xl uppercase text-white font-bold">
+                {$t("products.applications", locale)}:
+              </h2>
+
+              <ul class="mt-4 text-white">
+                {applications.map((application) => (
+                  <li class="flex items-center space-x-2 md:text-lg">
+                    <span>
+                      <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        class="h-2 w-2"
+                        viewBox="0 0 20 20"
+                        fill="currentColor"
+                      >
+                        <circle cx="10" cy="10" r="10" />
+                      </svg>
+                    </span>
+                    <span>{application}</span>
+                  </li>
+                ))}
+              </ul>
+            </section>
+          )
+        }
       </div>
-      {
-        product.data.images.slice(0, 3).map((image, index) => (
-          <div
-            class="text-border-primary"
-            transition:name={`product-${product.slug}-${index}`}
-          >
-            <Hexagon
-              size="3xl"
-              class:list={["hidden lg:flex", index > 0 && "-ml-12"]}
-            >
-              <Image
-                class={
-                  image.height < image.width ? "h-full w-auto" : "w-full h-auto"
-                }
-                src={image}
-                alt={product.data.title}
-              />
-            </Hexagon>
-            <Hexagon
-              size="lg"
-              class:list={["hidden md:flex lg:hidden", index > 0 && "-ml-8"]}
-            >
-              <Image
-                class={
-                  image.height < image.width ? "h-full w-auto" : "w-full h-auto"
-                }
-                src={image}
-                alt={product.data.title}
-              />
-            </Hexagon>
-            <Hexagon
-              size="xxs"
-              class:list={["flex md:hidden", index > 0 && "-ml-4"]}
-            >
-              <Image
-                class={
-                  image.height < image.width ? "h-full w-auto" : "w-full h-auto"
-                }
-                src={image}
-                alt={product.data.title}
-              />
-            </Hexagon>
-          </div>
-        ))
-      }
+
+      <div
+        class="relative min-h-full overflow-hidden"
+        transition:name={`product-${product.slug}`}
+      >
+        <Image
+          class={"w-full h-full object-cover"}
+          src={product.data.titleImage}
+          alt={product.data.title}
+        />
+      </div>
     </section>
 
     <section
       class="space-y-4 text-white leading-relaxed mt-4 md:mt-12 md:text-lg"
       set:html={Description}
     />
-
-    {
-      !!applications.length && (
-        <section>
-          <h2 class="mt-12 text-xl md:text-4xl uppercase text-white font-bold">
-            {$t("products.applications", locale)}:
-          </h2>
-
-          <ul class="mt-4 text-white">
-            {applications.map((application) => (
-              <li class="flex items-center space-x-2 md:text-lg">
-                <span>
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    class="h-2 w-2"
-                    viewBox="0 0 20 20"
-                    fill="currentColor"
-                  >
-                    <circle cx="10" cy="10" r="10" />
-                  </svg>
-                </span>
-                <span>{application}</span>
-              </li>
-            ))}
-          </ul>
-        </section>
-      )
-    }
 
     <Separator
       href={href}
@@ -262,9 +229,44 @@ const resolvePublicPath = (path: string) => {
       hasSubproducts &&
         product.data.subproducts?.map((subproduct) => (
           <div class="mt-16">
-            <h2 class="uppercase font-bold text-2xl lg:text-4xl text-white underline underline-offset-8">
-              {resolvePropByLocale(subproduct, "title", locale)}
-            </h2>
+            <div class="grid md:grid-cols-[30%_1fr] grid-flow-row gap-8 items-center">
+              <h2 class="uppercase font-bold text-2xl lg:text-4xl text-white">
+                {resolvePropByLocale(subproduct, "title", locale)}
+              </h2>
+
+              <div>
+                <GalleryModal max={2}>
+                  {subproduct.images.map((image) => (
+                    <div class="flex items-center justify-center cursor-pointer">
+                      <Hexagon size="3xl">
+                        <Image
+                          class={
+                            image.height < image.width
+                              ? "h-full w-auto"
+                              : "w-full h-auto"
+                          }
+                          src={image}
+                          alt={subproduct.title}
+                        />
+                      </Hexagon>
+                    </div>
+                  ))}
+
+                  {subproduct.images.map((image) => (
+                    <Image
+                      class={
+                        image.height > image.width
+                          ? "h-full w-auto"
+                          : "w-full h-auto"
+                      }
+                      src={image}
+                      alt={subproduct.title}
+                      slot="gallery"
+                    />
+                  ))}
+                </GalleryModal>
+              </div>
+            </div>
 
             {subproduct.description && (
               <section
@@ -276,39 +278,6 @@ const resolvePublicPath = (path: string) => {
                 )}
               />
             )}
-
-            <div class="mt-12">
-              <GalleryModal>
-                {subproduct.images.map((image) => (
-                  <div class="flex items-center justify-center cursor-pointer">
-                    <Hexagon size="3xl">
-                      <Image
-                        class={
-                          image.height < image.width
-                            ? "h-full w-auto"
-                            : "w-full h-auto"
-                        }
-                        src={image}
-                        alt={subproduct.title}
-                      />
-                    </Hexagon>
-                  </div>
-                ))}
-
-                {subproduct.images.map((image) => (
-                  <Image
-                    class={
-                      image.height > image.width
-                        ? "h-full w-auto"
-                        : "w-full h-auto"
-                    }
-                    src={image}
-                    alt={subproduct.title}
-                    slot="gallery"
-                  />
-                ))}
-              </GalleryModal>
-            </div>
 
             {subproduct.youtube && (
               <iframe
