--- a/src/pages/[locale]/[about].astro
+++ b/src/pages/[locale]/[about].astro
@@ -95,7 +95,7 @@ const values = {
               ]}
               style={{ right: `calc(50% - ${100 + (index - 2) * 190}px)` }}
             >
-              <Hexagon class="grayscale" size="md">
+              <Hexagon class="grayscale" hexagon size="md">
                 <Image
                   class={
                     dna.image.height < dna.image.width
