--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -84,8 +84,11 @@ const config = await getEntry("config", "index");
 			is:inline
 			src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 
-		<link rel="icon" type="image/svg+xml" href="/logo-min.svg" />
-		<link rel="shortcut icon" type="image/png" href="/logo-min.png" />
+		<link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="shortcut icon" href="/favicon.ico" />
+		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+		<link rel="manifest" href="/site.webmanifest" />
 		<title>{resolvedTitle}</title>
 
 		<ViewTransitions />
